--- a/package.json
+++ b/package.json
@@ -1,36 +1,21 @@
 {
-  "name": "movdb",
+  "name": "lumdb",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "prop-types": "^15.6.2",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
-    "react-overdrive": "0.0.10",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "2.0.5",
-    "styled-components": "^4.0.2"
+    "prop-types": "^15.6.0",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "react-overdrive": "0.0.9",
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "1.0.14",
+    "react-transition-group": "^2.2.1",
+    "styled-components": "^2.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ],
-  "devDependencies": {
-    "eslint": "^5.8.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-react": "^7.11.1"
   }
 }
